--- a/index.html
+++ b/index.html
@@ -1,13 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My First Web Page</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Bekers Page</title>
+
+  <style>
+    body {
+      background-color: black;
+      color: #00ffff; /* Neon blue */
+      font-family: "Arial Black", "Impact", sans-serif;
+      font-style: italic; /* Makes text slanted */
+      text-align: center;
+      margin: 0;
+      padding: 0;
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      border: 5px solid;
+      border-image: linear-gradient(45deg, #ff0080) 1; /* Neon pink/blue border */
+      box-sizing: border-box;
+    }
+
+    h1 {
+      font-size: 5rem;
+      color: #00ffff;
+      text-shadow: 0 0 10px #00ffff, 0 0 20px #00ffff;
+    }
+
+    h2, p {
+      font-size: 2rem;
+      color: #00ffff;
+      text-shadow: 0 0 5px #00ffff, 0 0 10px #00ffff;
+      margin: 0.5rem 0;
+    }
+  </style>
 </head>
 <body>
-    <h1>Bekers Page</h1>
-    <h2>21 and obsessed with bikes and cars</h2>
-    <p>Hi! My name is Beker, welcome to my page</p>
+  <h1>Bekers Page</h1>
+  <h2>Hi im Beker and welcome to my page ;)</h2>
+
 </body>
 </html>
+
