--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <style>
     body {
       background-color: black;
-      color: #00ffff; /* Neon blue */
+      color: #00ffff; 
       font-family: "Arial Black", "Impact", sans-serif;
-      font-style: italic; /* Makes text slanted */
+      font-style: italic; 
       text-align: center;
       margin: 0;
       padding: 0;
@@ -20,7 +20,7 @@
       justify-content: center;
       align-items: center;
       border: 5px solid;
-      border-image: linear-gradient(45deg, #ff0080) 1; /* Neon pink/blue border */
+      border-image: linear-gradient(45deg, #ff0080) 1; 
       box-sizing: border-box;
     }
 
