--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <style>
     body {
-      background-color: black;
+      background-color: rgb(61, 51, 51);
       color: #00ffff; 
       font-family: "Arial Black", "Impact", sans-serif;
       font-style: italic; 
@@ -39,7 +39,7 @@
   </style>
 </head>
 <body>
-  <h1>Bekers Page</h1>
+  <h1>Bekers Underground Page</h1>
   <h2>Hi im Beker and welcome to my page ;)</h2>
 
 </body>
