--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
   <style>
     body {
-      background-color: rgb(0, 0, 0);
-      color: #00ffff; 
+      background-color: rgb(48, 40, 40);
+      color: #ffe600; 
       font-family: "Arial Black", "Impact", sans-serif;
       font-style: italic; 
       text-align: center;
@@ -20,20 +20,20 @@
       justify-content: center;
       align-items: center;
       border: 5px solid;
-      border-image: linear-gradient(45deg, #ff0080) 1; 
+      border-image: linear-gradient(45deg, #ffffff) 1; 
       box-sizing: border-box;
     }
 
     h1 {
       font-size: 5rem;
-      color: #00ffff;
-      text-shadow: 0 0 10px #00ffff, 0 0 20px #00ffff;
+      color: #ffe600;
+      text-shadow: 0 0 10px #ffe600, 0 0 20px #ffe600;
     }
 
     h2, p {
       font-size: 2rem;
-      color: #00ffff;
-      text-shadow: 0 0 5px #00ffff, 0 0 10px #00ffff;
+      color: #ffe600;
+      text-shadow: 0 0 5px #ffe600, 0 0 10px #ffe600;
       margin: 0.5rem 0;
     }
   </style>
